Extract initial version of TurnKey support library